--- a/html/Memories.html
+++ b/html/Memories.html
@@ -112,7 +112,7 @@
           <div class="ly-txt26">
             <p>我的小陈同学你要天天开心</p>
             <p>永远保持微笑和快乐的心情</p>
-            <p>xxxxxxxxxxxx</p>
+            <p>爱你的小李同学！</p>
           </div>
           <div class="ly-imgbox23" style="height: 70%">
             <img class="ly-img23" src="../img/5.jpg" style="height: 100%">
